templates para cada tipo de pessoa, individual e coletivo, com as respetivas ligações

--- a/TPC6/cinema/templates/index.html
+++ b/TPC6/cinema/templates/index.html
@@ -19,6 +19,10 @@
             <ul class="w3-ul">
                 <li><a href="/films">Films</a></li>
                 <li><a href="/actors">Actors</a></li>
+                <li><a href="/directors">Directors</a></li>
+                <li><a href="/musicComposers">Music Composers</a></li>
+                <li><a href="/producers">Producers</a></li>
+                <li><a href="/writers">Writers</a></li>
             </ul>
         </div>
 
