--- a/Projeto2024/repositorium/templates/actions_records.html
+++ b/Projeto2024/repositorium/templates/actions_records.html
@@ -7,6 +7,7 @@
     <title>GraphDB Data</title>
     <link rel="icon" href="{{ url_for('static', filename='favicon.png') }}"/>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/navBar.css') }}"/>
+    <!--<link rel="stylesheet" href="{{ url_for('static', filename='javascript/refresh.js') }}"/>-->
 </head>
 <body>
 
@@ -18,7 +19,7 @@
 
     <div class="filters">
         <h2>Filters</h2>
-        <form class="form_filters" action="listRecords" method="post">
+        <form class="form_filters" action="actionsRecords" method="post">
             <div class="input-group recordId">
                 <label for="recordId">Id:</label>
                 <input type="text" id="recordId" name="recordId">
@@ -49,30 +50,87 @@
     <div class="list">
         <h1>List Record</h1>
         <h2>Results | {{ listRecords|length }}</h2>
+        <a href="createRecord"> ➕ </a>
+                
         <table id="listRecords">
             <tr>
+                <th> Actions </th>
                 <th>ID Record</th>
                 <th>Title Record</th>
                 <th>Authors</th>
                 <th>Date Record</th>
             </tr>
-            {% for record in listRecords %}
+        {% for record in listRecords %}
+            {% set record_id = record.id.value.replace("/", "_") %}
             <tr id="recordId_{{ loop.index }}">
-                {% set record_id = record.id.value.replace("/", "_") %}
+                <td>
+                    <button type="button" class="deleteButton" data-id="{{ record_id }}">🗑️</button>
+                    <button type="button" class="editButton" data-id="{{ record_id }}">✏️</button>
+                </td>
                 <td><a href="record/{{ record_id }}"> {{ record.id.value }} </a></td>
                 <td><a href="record/{{ record_id }}"> {{ record.title.value }} </a></td>
                 <td>
-                    {% for contributor, id in record.names %}
-                        <a href="{{ id }}"> {{ contributor.value }} </a> | 
-                    {% endfor %}
+                {% for contributor, id in record.names %}
+                {% endfor %}
                 </td>
                 <td>{{ record.timestamp.value }}</td>
             </tr>
         {% endfor %}
-        
         </table>
     </div>
 </div>
+
+<script>
+    document.querySelectorAll('.deleteButton').forEach(button => {
+        button.addEventListener('click', function() {
+            const recordId = this.getAttribute('data-id');
+
+            fetch(`/recordDelete/${recordId}`, {
+                method: 'DELETE',
+                headers: {
+                    'Content-Type': 'application/json'
+                }
+            })
+            .then(response => {
+                if (response.ok) {
+                location.reload();
+            } else {
+                alert('Failed to delete the record');
+            }
+            })
+            .catch(error => {
+                console.error('Error:', error);
+                alert('An error occurred while deleting the record');
+            });
+        });
+    });
+
+    document.querySelectorAll('.editButton').forEach(button => {
+        button.addEventListener('click', function() {
+            const recordId = this.getAttribute('data-id');
+
+            fetch(`/recordEdit/${recordId}`, {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify(data)
+            })
+            .then(response => {
+                if (response.ok) {
+                    alert('Record updated successfully');
+                } else {
+                    alert('Failed to update the record');
+                }
+            })
+            .catch(error => {
+                console.error('Error:', error);
+                alert('An error occurred while updating the record');
+            });
+        });
+    });
+</script>
+
 
 </body>
 </html>
