--- a/Projeto2024/repositorium/templates/createRecord.html
+++ b/Projeto2024/repositorium/templates/createRecord.html
@@ -16,6 +16,7 @@
     </div>
 
     <div style="margin-left:25%;padding:1px 16px;height:1000px;">
+    <h1>Create a Record</h1>
     <form method="Post" autocomplete="off" action="/createRecord">
         <div>
             <div>
@@ -62,6 +63,7 @@
         <input type="submit" value=Create Record"">
 
     </form>
+
     </div>
 
     <script>
