--- a/Projeto2024/repositorium/templates/listRecords.html
+++ b/Projeto2024/repositorium/templates/listRecords.html
@@ -49,6 +49,11 @@
     <div class="list">
         <h1>List Record</h1>
         <h2>Results | {{ listRecords|length }}</h2>
+
+        <div class="sidebar">
+            {% include 'pagination.html' %}
+        </div>
+
         <table id="listRecords">
             <tr>
                 <th>ID Record</th>
@@ -63,15 +68,25 @@
                 <td><a href="record/{{ record_id }}"> {{ record.title.value }} </a></td>
                 <td>
                     {% for contributor, id in record.names %}
-                        <a href="{{ id }}"> {{ contributor.value }} </a> | 
+                        {% if contributor.value != "" %}
+                            <a href="{{ id }}"> {{ contributor.value }} </a> | 
+                        {%else%}
+                            <a href="{{ id }}"> {{ id.value }} </a> | 
+                        {% endif %}
                     {% endfor %}
                 </td>
                 <td>{{ record.timestamp.value }}</td>
             </tr>
         {% endfor %}
-        
         </table>
+
+        <div class="sidebar">
+            {% include 'pagination.html' %}
+        </div>
+
     </div>
+
+
 </div>
 
 </body>
