Create de records mais ou menos feito

--- a/Projeto2024/repositorium/templates/createRecord.html
+++ b/Projeto2024/repositorium/templates/createRecord.html
@@ -39,24 +39,39 @@
                 <input type="text" id="doi" name="doi">
             </div>
 
-            <div class="autocomplete" style="width:300px;">
-                <input id="names" type="text" name="names" placeholder="Name of Contributor">
+            <div>
+                <label for="author">Author:</label>
+                <input type="text" id="author" name="authors" required>
             </div>
 
-            <div class="autocomplete" style="width:300px;">
-                <input id="journals" type="text" name="journals" placeholder="Name of Journal">
+            <div>
+                <label for="editor">Editor:</label>
+                <input type="text" id="editor" name="editors" required>
             </div>
 
-            <div class="autocomplete" style="width:300px;">
-                <input id="publishers" type="text" name="publishers" placeholder="Name of Publisher Associated">
+            <div>
+                <label for="advisor">Advisor:</label>
+                <input type="text" id="advisor" name="advisors" required>
             </div>
 
-            <div class="autocomplete" style="width:300px;">
-                <input id="departments" type="text" name="departments" placeholder="Name of Department Associated">
+            <div>
+                <label for="department">Department:</label>
+                <input type="text" id="department" name="departments">
             </div>
 
-            <div class="autocomplete" style="width:300px;">
-                <input id="fundingEnts" type="text" name="fundingEnts" placeholder="Name of Funding Entities Associated">
+            <div>
+                <label for="journal">Journal:</label>
+                <input type="text" id="journal" name="journals">
+            </div>
+
+            <div>
+                <label for="publisher">Publisher:</label>
+                <input type="text" id="fundingEnt" name="publishers">
+            </div>
+
+            <div>
+                <label for="fundingEnt">fundingEnt:</label>
+                <input type="text" id="fundingEnt" name="fundingEnts">
             </div>
 
         </div>
