Create de record concluido e display dos autores de um record

--- a/Projeto2024/repositorium/templates/createRecord.html
+++ b/Projeto2024/repositorium/templates/createRecord.html
@@ -46,12 +46,12 @@
 
             <div>
                 <label for="editor">Editor:</label>
-                <input type="text" id="editor" name="editors" required>
+                <input type="text" id="editor" name="editors">
             </div>
 
             <div>
                 <label for="advisor">Advisor:</label>
-                <input type="text" id="advisor" name="advisors" required>
+                <input type="text" id="advisor" name="advisors">
             </div>
 
             <div>
