--- a/Projeto2024/repositorium/templates/empty.html
+++ b/Projeto2024/repositorium/templates/empty.html
@@ -13,8 +13,6 @@
     <div class="sidebar">
         {% include 'sidebar.html' %}
     </div>
-
-
-    <p>O servidor de dados não forneceu informação...</p>
+    <p>Sucks to be you. There is no info. Go back.</p>
 </body>
 </html>
