--- a/Projeto2024/repositorium/templates/record.html
+++ b/Projeto2024/repositorium/templates/record.html
@@ -20,17 +20,32 @@
     <div class="list">
         <h1>List Records</h1>
         <h2>Results</h2>
+        <h3>Properties</h3>
         <table id="listRecords">
             <tr>
                 <th>Data</th>
                 <th>Value</th>
             </tr>
-        {% for key, value  in data %}
+        {% for key, value  in data.recordFields %}
             <tr>
                 <td> <b>{{ key }}</b> </td>
                 <td> {{ value }}</td>
             </tr>
         {% endfor %}
+        </table>
+
+        <h3>Authors</h3>
+        <table>
+            {% for key in data.authors %}
+            <tr>
+                <td> <b> {{key.id}} </b> </td>
+                {%if key.name != ""%}
+                    <td> {{ key.name }}</td>
+                {%else%}
+                    <td> --- </td>
+                {%endif%}
+            </tr>
+            {% endfor %}
         </table>
     </div>
 </div>
