--- a/Projeto2024/repositorium/templates/sidebar.html
+++ b/Projeto2024/repositorium/templates/sidebar.html
@@ -1,11 +1,10 @@
-<ul>
-    <li><a class="active" href="/">Home</a></li>
-    <li><a href="/listDepartments">Departments</a></li>
-    <li><a href="/listRecords">Records</a></li>
-    
-    <li><a href="/actionsRecords">Actions Records</a></li>
-
-    <li><a href="/listPublishers">Publishers</a></li>
-    <li><a href="/listContributors">Contributors</a></li>
-    <li><a href="/listJournals">Journals</a></li>
-</ul>
+<img class="logo" src="{{ url_for('static', filename='RepositoriUM.png') }}" alt="RepositoriUM Logo">
+    <ul>
+        <li><a class="active" href="/">Home</a></li>
+        <li><a href="/listDepartments">Departments</a></li>
+        <li><a href="/listRecords">Records</a></li>
+        <li><a href="/actionsRecords">Actions Records</a></li>
+        <li><a href="/listPublishers">Publishers</a></li>
+        <li><a href="/listContributors">Contributors</a></li>
+        <li><a href="/listJournals">Journals</a></li>
+    </ul>
