--- a/Projeto2024/repositorium/static/styles/navBar.css
+++ b/Projeto2024/repositorium/static/styles/navBar.css
@@ -1,31 +1,178 @@
+@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&display=swap');
+
+:root {
+  --white: #EEEEEE;
+  --whiteTwo: #fbfbeb;
+
+  --colorOne: #f9f7dc;
+  --colorTwo: #dad7cd;
+  --colorThree: #a3b18a;
+  --colorFour: #588157;
+  --colorFive: #3a5a40;
+  --colorSix: #344e41;
+  --greyOne: #555;
+  --greyTwo: gainsboro;
+  --black: #000000;
+}
+
 body {
   margin: 0;
 }
 
-ul {
+.sidebar ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
-  width: 20%;
-  background-color: #f1f1f1;
+  width: 18%;
+  background-color: var(--colorFour);
   position: fixed;
   height: 100%;
   overflow: auto;
 }
 
-li a {
+.sidebar li a {
   display: block;
-  color: #000;
+  color: var(--black);
   padding: 8px 16px;
   text-decoration: none;
 }
 
-li a.active {
-  background-color: #04AA6D;
-  color: white;
+.sidebar li a.active {
+  background-color: var(--colorSix);
+  color: var(--black);
 }
 
-li a:hover:not(.active) {
-  background-color: #555;
-  color: white;
+.sidebar li a:hover:not(.active) {
+  background-color: var(--colorFive);
+  color: var(--black);
+}
+
+.content {
+  margin-left: 22%;
+  padding: 1px 16px;
+  height: 1000px;
+}
+
+.content a {
+  color: var(--colorFour);
+}
+
+.content a:link, 
+.content a:visited {
+  text-decoration: none;
+}
+
+.content a:visited {
+  color: var(--black);
+}
+
+.content a:hover {
+  text-decoration: underline;
+}
+
+.content a:active {
+  text-decoration: underline;
+}
+
+.content .tab_green {
+  font-family: Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+.content .tab_green td, 
+.content .tab_green th {
+  border: 1px solid var(--white);
+  padding: 8px;
+}
+
+.content .tab_green tr:nth-child(even) {
+  background-color: var(--whiteTwo);
+}
+
+.content .tab_green tr:hover {
+  background-color: var(--whiteTwo);
+}
+
+.content .tab_green th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: var(--colorSix);
+  color: var(--whiteTwo);
+}
+
+.content .pagination {
+  padding: 2px;
+  background-color: var(--greyTwo);
+  margin: auto;
+  text-align: center;
+}
+
+h1 {
+  font-family: "DM Serif Text", serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 42px;
+}
+
+.dm-serif-text-regular {
+  font-family: "DM Serif Text", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+h3 {
+  font-family: "DM Serif Text", serif;
+  font-weight: 400;
+  font-style: italic;
+  font-size: 30px;
+}
+
+.button-container {
+  display: flex;
+  justify-content: flex-end; /* Add this line */
+}
+
+.createButton {
+  display: inline-block;
+  padding: 10px 20px;
+  font-size: 16px;
+  color: var(--white);
+  background-color: var(--colorFour);
+  border: none;
+  border-radius: 10px;
+  text-align: center;
+  text-decoration: none;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  margin: 10px;
+}
+
+.createButton:hover {
+  background-color: var(--colorSix);
+}
+
+.createButton:active {
+  background-color: var(--black);
+}
+
+.header-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+}
+
+.header-container h1 {
+  margin: 0; /* Remove default margin for proper alignment */
+}
+
+.header-container h2 {
+  margin: 0; /* Remove default margin for proper alignment */
+}
+
+.logo {
+  max-width: 100px; /* Adjust as needed */
+  height: auto;
 }
