--- a/Projeto2024/repositorium/templates/createRecord.html
+++ b/Projeto2024/repositorium/templates/createRecord.html
@@ -15,8 +15,9 @@
         {% include 'sidebar.html' %}
     </div>
 
-    <div style="margin-left:25%;padding:1px 16px;height:1000px;">
+    <div class="content">
     <h1>Create a Record</h1>
+    
     <form method="Post" autocomplete="off" action="/createRecord">
         <div>
             <div>
