--- a/Projeto2024/repositorium/templates/index.html
+++ b/Projeto2024/repositorium/templates/index.html
@@ -14,11 +14,10 @@
     {% include 'sidebar.html' %}
 </div>
 
-<div style="margin-left:25%;padding:1px 16px;height:1000px;">
-  <h2>Repositorium v2</h2>
-  <h3>Try to scroll this area, and see how the sidenav sticks to the page</h3>
+<div class="content">
+  <h1>Repositorium v2</h1>
+  <h3>Who we are</h3>
   <p>O RepositóriUM é o repositório institucional da Universidade do Minho e foi constituído com o objetivo de armazenar, preservar, divulgar e dar acesso à produção intelectual da Universidade do Minho em formato digital.
-
     Pretende reunir num único sítio o conjunto das publicações científicas da universidade, contribuindo para o acréscimo do impacto da investigação desenvolvida na instituição, incrementando a sua visibilidade e dos que nela trabalham, bem como garantir a preservação da memória intelectual da Universidade do Minho.</p>
 </div>
 
