--- a/Projeto2024/repositorium/templates/listContributors.html
+++ b/Projeto2024/repositorium/templates/listContributors.html
@@ -14,11 +14,11 @@
         {% include 'sidebar.html' %}
     </div>
 
-<div style="margin-left:25%;padding:1px 16px;height:1000px;">
+<div class="content">
     <div class="list">
         <h1>List Contributors</h1>
         <h2>Results | {{ listContributors|length }}</h2>
-        <table id="listDepartments">
+        <table id="listDepartments" class="tab_green">
             <tr>
                 <th>Department ID</th>
                 <th>Department Name</th>
