--- a/Projeto2024/repositorium/templates/listJournals.html
+++ b/Projeto2024/repositorium/templates/listJournals.html
@@ -14,11 +14,11 @@
         {% include 'sidebar.html' %}
     </div>
 
-<div style="margin-left:25%;padding:1px 16px;height:1000px;">
+<div class="content">
     <div class="list">
         <h1>List Journals</h1>
         <h2>Results | {{ listJournals|length }}</h2>
-        <table id="listJournals">
+        <table id="listJournals" class="tab_green">
             <tr>
                 <th>Publisher ID</th>
                 <th>Publisher Name</th>
