Routing dos filtros a funcionar

--- a/Projeto2024/repositorium/static/styles/filters.css
+++ b/Projeto2024/repositorium/static/styles/filters.css
@@ -76,5 +76,5 @@
 }
 
 .filters .input-group input[type="submit"]:active {
-    background-color: #004494;
+    background-color: var(--colorSix);
 }
