--- a/Projeto2024/repositorium/templates/filters.html
+++ b/Projeto2024/repositorium/templates/filters.html
@@ -1,5 +1,7 @@
 <h2>Filters</h2>
-<form class="form_filters" action="actionsRecords" method="post">
+<p>{{filter_route}}</p>
+<form class="form_filters" action="{{filter_route}}" method="post">
+    <!--"actionsRecords" -->
     <div class="input-group recordId">
         <label for="recordId">Id:</label>
         <input type="text" id="recordId" name="recordId">
