--- a/Projeto2024/repositorium/templates/listJournals.html
+++ b/Projeto2024/repositorium/templates/listJournals.html
@@ -20,8 +20,8 @@
         <h2>Results | {{ listJournals|length }}</h2>
         <table id="listJournals" class="tab_green">
             <tr>
-                <th>Publisher ID</th>
-                <th>Publisher Name</th>
+                <th>Journal ID</th>
+                <th>Journal Name</th>
             </tr>
             {% for pub in listJournals %}
             <tr>
