--- a/Projeto2024/repositorium/templates/empty.html
+++ b/Projeto2024/repositorium/templates/empty.html
@@ -13,6 +13,8 @@
     <div class="sidebar">
         {% include 'sidebar.html' %}
     </div>
-    <p>Sucks to be you. There is no info. Go back.</p>
+    <div class="content">
+        <p>Sucks to be you. There is no info. Go back.</p>
+    </div>
 </body>
 </html>
