--- a/Projeto2024/repositorium/templates/createRecord.html
+++ b/Projeto2024/repositorium/templates/createRecord.html
@@ -76,7 +76,7 @@
             </div>
 
         </div>
-        <input type="submit" value=Create Record"">
+        <input type="submit" value="Create Record">
 
     </form>
 
