--- a/Projeto2024/repositorium/templates/empty.html
+++ b/Projeto2024/repositorium/templates/empty.html
@@ -14,7 +14,8 @@
         {% include 'sidebar.html' %}
     </div>
     <div class="content">
-        <p>Sucks to be you. There is no info. Go back.</p>
+        <h1>404</h1>
+        <p>The page you are looking for is lost in the void.</p>
     </div>
 </body>
 </html>
