--- a/Projeto2024/repositorium/templates/filters.html
+++ b/Projeto2024/repositorium/templates/filters.html
@@ -10,6 +10,27 @@
         <label for="title">Title:</label>
         <input type="text" id="title" name="title">
     </div>
+
+
+    <div class="input-group keyword">
+        <label for="keyword">Keywords:</label>
+        <input type="text" id="keyword" name="keyword">
+    </div>
+    <div class="input-group department">
+        <label for="department">Departments:</label>
+        <input type="text" id="department" name="department">
+    </div>
+    <div class="input-group keyword">
+        <label for="keyword">Keywords:</label>
+        <input type="text" id="keyword" name="keyword">
+    </div>
+    <div class="input-group department">
+        <label for="department">Departments:</label>
+        <input type="text" id="department" name="department">
+    </div>
+
+
+
     <div class="input-group contributor">
         <label for="contributor">Contributor:</label>
         <input type="text" id="contributor" name="contributor">
