--- a/Projeto2024/repositorium/templates/record.html
+++ b/Projeto2024/repositorium/templates/record.html
@@ -144,9 +144,33 @@
                 <p><b>No journals associated.</b></p>
             {%endif%}
 
+            <br><br><br><hr>
+            <h3>Funding Entites </h3>
+            {%if data.funders != []%}
+                <table class="tab_green">
+                    <tr>
+                        <th>Funding Entity Id</th>
+                        <th>Funding Entity Name</th>
+                    </tr>
+                    {% for key in data.funders %}
+                    <tr>
+                        <td> <b> {{key.id}} </b> </td>
+                        {%if key.name != ""%}
+                            <td> {{ key.name }}</td>
+                        {%else%}
+                            <td> --- </td>
+                        {%endif%}
+                    </tr>
+                {% endfor %}
+                </table>
+            {%else%}
+                <p><b>No funding entities associated.</b></p>
+            {%endif%}
 
 
 
+            <br>
+            <br>
         </div>
     </div>
 
